apps/monitoring/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Dashboards and metrics
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/href: https://grafana.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
